[package]
name = "murmur8tion"
version = "0.1.0"
edition = "2021"

[dependencies]
arbitrary-int = "1.3.0"
async-fs = "2.1.2"
bevy = { version = "0.15.0", default-features = false, features = [
    "bevy_asset",
    "bevy_audio",
    "bevy_render",
    "bevy_sprite",
    "bevy_window",
    "bevy_winit",
    "wayland",
    "x11",
] }
bevy_egui = "0.32.0"
bitbybit = "1.3.3"
bytemuck = { version = "1.21.0", features = ["must_cast"] }
image = { version = "0.25.5", default-features = false }
num-traits = "0.2.19"
paste = "1.0.15"
rand = { version = "0.9.0", default-features = false, features = ["os_rng"] }
rand_xoshiro = "0.7.0"
rfd = "0.15.2"
rodio = { version = "0.19.0", default-features = false }
thiserror = "2.0.11"
